# Grace

./: CMakeLists.txt  README.md
src/grace/: editor.cpp  editor.h  main.cpp  main.h  property.h  sidebar.cpp  sidebar.h
src/grace/gproc/: lexer.cpp  lexer.h  parser.cpp  parser.h  types.cpp  types.h
